testing/tests/ui/iso646.stderr
error: the binary AND operator is called `bitand` in rinja
       failed to parse template source at row 1, column 6 near:
       " b }}"
 --> tests/ui/iso646.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: the filter operator `|` must not be preceded by any whitespace characters
       the binary OR operator is called `bitor` in rinja
       failed to parse template source at row 1, column 4 near:
       " | b }}"
  --> tests/ui/iso646.rs:17:10
   |
17 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: the binary XOR operator is called `xor` in rinja
       failed to parse template source at row 1, column 6 near:
       " b }}"
  --> tests/ui/iso646.rs:31:10
   |
31 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
